LF-4156 fix sex details input not taking full width on mobile

--- a/packages/webapp/src/components/Animals/AddAnimalsFormCard/styles.module.scss
+++ b/packages/webapp/src/components/Animals/AddAnimalsFormCard/styles.module.scss
@@ -25,12 +25,11 @@
   display: flex;
   align-items: start;
   gap: 16px;
+}
 
-  .countInput {
-    flex-basis: 104px;
-  }
-
-  > *:last-child {
+.countInput {
+  flex-basis: 104px;
+  & + div {
     flex: 1;
   }
 }
