--- a/packages/webapp/src/components/Form/SexDetails/SexDetailsCountInput/styles.module.scss
+++ b/packages/webapp/src/components/Form/SexDetails/SexDetailsCountInput/styles.module.scss
@@ -24,6 +24,7 @@
 }
 
 .countInput {
+  width: 100%;
   text-align: center;
   font-weight: 700;
   color: var(--Colors-Neutral-Neutral-600);
